# vojne_net

./: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
vojne_net/: package-lock.json  package.json
vojne_net/public/: index.html  manifest.json
